--- a/Battleships/MainWindow.xaml
+++ b/Battleships/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Battleships"
         mc:Ignorable="d"
-        Title="Battleships" Height="310" Width="437">
+        Title="Battleships" Height="310" Width="437" Loaded="OnLoaded">
     <Window.DataContext>
         <local:GameViewModel/>
     </Window.DataContext>
